Add linenoise, attach and continue process

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.1)
 project(Debugger)
 
 file(GLOB SRC_FILES src/*.cpp)
-file(GLOB HEADER_FIlES src/include/*.h)
+file(GLOB HEADER_FILES src/include/*.h)
 
 # Clang format
 add_custom_target(format COMMAND clang-format 
@@ -16,6 +16,8 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(CMAKE_CXX_STANDARD 20)
 
-include_directories(src/include)
-add_executable(Debugger ${SRC_FILES})
+set(LIB_FILES lib/linenoise/linenoise.c)
+
+include_directories(src/include lib/linenoise)
+add_executable(Debugger ${SRC_FILES} ${LIB_FILES})
 
