Add libelfin as a submodule and to the build

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/linenoise"]
 	path = lib/linenoise
 	url = https://github.com/antirez/linenoise
+[submodule "lib/libelfin"]
+	path = lib/libelfin
+	url = https://github.com/TartanLlama/libelfin
